# Emerald64

./: .gitignore  .gitmodules  CMakeLists.txt
assets/meshes/: camera.e64mesh  cube.fbx  sphere.e64mesh
assets/meshes/yoshi/mesh/: yoshi_from_mario_party_on_the_nintendo_64.e64mesh
assets/scenes/: backup.json  scene.json
assets/shaders/: frag.hlsl  fragment.frag  fragment.hlsl  object_frag.dxil  object_frag.hlsl  object_frag.metal  object_frag.spv  object_vert.dxil  object_vert.hlsl  object_vert.metal  object_vert.spv  outline_frag.dxil  outline_frag.hlsl  shader.vert  vert.hlsl  vertex.hlsl
editor/include/AssetImporter/: AssetImporter.h
editor/include/EditorCamera/: EditorCamera.h
editor/include/EditorInput/: EditorInput.h
editor/include/EditorLayer/: EditorLayer.h
editor/include/FBXParser/: FBXParser.h
editor/include/Layer/: EditorLayer.h  UILayer.h
editor/include/UIInput/: UIInput.h
editor/src/: main.cpp  pch.h
editor/src/AssetImporter/: AssetImporter.cpp
editor/src/EditorCamera/: EditorCamera.cpp
editor/src/EditorInput/: EditorInput.cpp
editor/src/EditorLayer/: EditorLayer.cpp
editor/src/FBXParser/: FBXParser.cpp
editor/src/Layer/: EditorLayer.cpp  UILayer.cpp
editor/src/UIInput/: UIInput.cpp
engine/include/: E64.h  E64API.h  E64Core.h  Engine.h  GCGameEngine.h  ctx.h
engine/include/AssetManager/: AssetHandle.h  AssetManager.h  Assets.h
engine/include/AssetSerialization/: MeshSerializer.h
engine/include/Camera/: Camera.h
engine/include/ECS/: Component.h  ComponentManager.h  ComponentRegistry.h  Componet.h  ComponetManager.h  Entity.h  Scene.h
engine/include/Event/: Event.h  EventDispatcher.h
engine/include/Input/: Input.h  SDLInput.h  Scancode.h
engine/include/Layer/: Layer.h  N64Layer.h  PhysicsLayer.h  SceneLayer.h
engine/include/Logger/: Logger.h
engine/include/Object/: Object.h
engine/include/Renderer/: FBXParser.h  IBO.h  IRenderer.h  Pipeline.h  RenderPass.h  Renderer.h  RendererHandle.h  Shader.h  TBO.h  Texture.h  VBO.h  Window.h
engine/include/Scene/: Scene.h
engine/include/Serialization/: MeshSerializer.h  SceneSerializer.h
engine/include/Window/: Window.h
engine/include/log/: logger.h
engine/src/: Engine.cpp  pch.h
engine/src/AssetManager/: AssetManager.cpp
engine/src/AssetSerialization/: MeshSerializer.cpp
engine/src/Camera/: Camera.cpp
engine/src/ECS/: ComponetManager.cpp  Entity.cpp  Scene.cpp
engine/src/Event/: EventDispatcher.cpp
engine/src/Input/: Input.cpp  SDLInput.cpp
engine/src/Layer/: Layer.cpp  N64Layer.cpp  PhysicsLayer.cpp  SceneLayer.cpp
engine/src/Logger/: Logger.cpp
engine/src/Object/: Object.cpp
engine/src/Renderer/: FBXParser.cpp  IBO.cpp  Pipeline.cpp  RenderPass.cpp  Renderer.cpp  Shader.cpp  TBO.cpp  Texture.cpp  VBO.cpp  Window.cpp
engine/src/Scene/: Scene.cpp
engine/src/Serialization/: MeshSerializer.cpp  SceneSerializer.cpp
engine/src/Window/: Window.cpp
engine/src/log/: logger.cpp
n64/: main.cpp  main.d
platform/N64/include/: N64Renderer.h
platform/N64/include/Camera/: N64Camera.h
platform/N64/include/Input/: N64Input.h
platform/N64/include/Layer/: N64Layer.h
platform/N64/include/Renderer/: N64Renderer.h
platform/N64/include/Window/: N64Window.h
platform/N64/src/: N64Renderer.cpp
platform/N64/src/Input/: N64Input.cpp
platform/N64/src/Layer/: N64Layer.cpp
platform/N64/src/Renderer/: N64Renderer.cpp
platform/N64/src/Window/: N64Window.cpp
platform/SDL/include/: SDLGPURegistry.h  SDLPipeline.h  SDLRenderer.h  SDLShader.h
platform/SDL/include/Input/: SDLInput.h
platform/SDL/include/Renderer/: SDLGPURegistry.h  SDLPipeline.h  SDLRenderer.h  SDLShader.h
platform/SDL/include/Window/: SDLWindow.h
platform/SDL/src/: SDLGPUBufferRegistry.cpp  SDLPipeline.cpp  SDLRenderer.cpp  SDLShader.cpp
platform/SDL/src/Input/: SDLInput.cpp
platform/SDL/src/Renderer/: SDLGPUBufferRegistry.cpp  SDLPipeline.cpp  SDLRenderer.cpp  SDLShader.cpp
platform/SDL/src/Window/: SDLWindow.cpp
runtime/: main.cpp
runtime/N64/: main.cpp
runtime/N64/include/N64Camera/: N64Camera.h
runtime/N64/include/N64Layer/: N64Layer.h
runtime/N64/src/: main.cpp
runtime/SDL/: main.cpp
runtime/SDL/include/: RuntimeLayer.h
runtime/SDL/src/: RuntimeLayer.cpp
runtime/SDL/src/Layer/: RuntimeLayer.cpp
sandbox/: Sandbox.cpp  Sandbox.h  main.cpp
